# phylometa

./: LICENSE  README.md  pyproject.toml
examples/: demo_meta.tsv  demo_tree.nwk
src/phylometa/: cli.py  io.py  plotting.py  qc.py  stats_categorical.py  stats_continuous.py  tree.py  utils.py
src/phylometa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_clade_enrichment.py  test_import.py  test_plotting.py  test_qc.py  test_stats_categorical.py  test_stats_continuous.py  test_tree.py
