[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phylometa"
version = "0.1.0"
description = "A lightweight toolkit for testing associations between phylogenetic trees and sample metadata"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Inwoo Baek", email = "YOUR_EMAIL@example.com" }
]
keywords = [
  "phylogenetics",
  "phylogenomics",
  "comparative-genomics",
  "bioinformatics",
  "metadata"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "biopython>=1.81"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/phylometa"
Repository = "https://github.com/YOUR_USERNAME/phylometa"
Issues = "https://github.com/YOUR_USERNAME/phylometa/issues"

[project.scripts]
phylometa = "phylometa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
